fix body overflow

--- a/client/src/components/Banner.module.css
+++ b/client/src/components/Banner.module.css
@@ -1,5 +1,5 @@
 .cafeBanner{
-    height: 25vh;
+    height: 24vh;
     width: 100vw;
     background-image: url('../assets/cafeBanner.jpg');
     background-size: 100% 100%;
