--- a/client/src/components/MenuNav.module.css
+++ b/client/src/components/MenuNav.module.css
@@ -5,6 +5,7 @@
     padding: 1vh 0vh;
     background-color: var(--colorPrimLight);
     width: 100vw;
+    height: 8vh;
 }
 .menuNav :global(.swiper) {
     width: 100%;
