--- a/client/src/components/Nav.module.css
+++ b/client/src/components/Nav.module.css
@@ -1,4 +1,5 @@
 .navBar{
+    height: 8vh;
     width: 100vw;
     height: fit-content;
     display: flex;
@@ -14,7 +15,6 @@
 }
 .spacer{
     height: 8vh;
-    width: 1005px;
 }
 .searchBox{
     background-color: var(--colorPrim);
